--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Account Deletion Request</h1>
 <p>If you would like to delete your account, please send an email to:</p>
-<p><strong>info@senindomainin.com</strong></p>
+<p><strong>narimaj.workspace@gmail.com</strong></p>
 <p>Your request will be processed within 7 days.</p>
 </body>
 </html>
