--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Account Deletion</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Account Deletion Request - Narimaj</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    max-width: 700px;
+    margin: 50px auto;
+    line-height: 1.6;
+    color: #333;
+}
+h1 {
+    color: #111;
+}
+a {
+    color: #0073e6;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+</style>
 </head>
 <body>
+
 <h1>Account Deletion Request</h1>
-<p>If you would like to delete your account, please send an email to:</p>
-<p><strong>narimaj.workspace@gmail.com</strong></p>
-<p>Your request will be processed within 7 days.</p>
+
+<p>If you would like to permanently delete your account and associated data, please send an email request to:</p>
+
+<p>
+<a href="mailto:narimaj.workspace@gmail.com">
+narimaj.workspace@gmail.com
+</a>
+</p>
+
+<p>Please include your registered email address and any relevant account details in your request.</p>
+
+<p>Your account and related personal data will be permanently deleted within <strong>7 business days</strong> after verification.</p>
+
+<p>Some information may be retained if required for legal or security purposes.</p>
+
 </body>
 </html>
